--- a/portfolio.html
+++ b/portfolio.html
@@ -40,140 +40,140 @@
         </div>
     </header>
     <main class="main-content">
-        <section class="section our-projects-section">
+        <section class="section projects">
             <div class="container">
-            <h1 class="main-title visually-hidden">Портфолио</h1>
-            <ul class="list projects-filter-list">
-                <li class="projects-filter-item"><button class="filter-btn current" type="button">Все</button></li>
-                <li class="projects-filter-item"><button class="filter-btn" type="button">Веб-сайты</button></li>
-                <li class="projects-filter-item"><button class="filter-btn" type="button">Приложения</button></li>
-                <li class="projects-filter-item"><button class="filter-btn" type="button">Дизайн</button></li>
-                <li class="projects-filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>
+            <h1 class="projects__title visually-hidden">Портфолио</h1>
+            <ul class="list projects-filter">
+                <li class="projects-filter__item"><button class="project__filter-btn current" type="button">Все</button></li>
+                <li class="projects-filter__item"><button class="project__filter-btn" type="button">Веб-сайты</button></li>
+                <li class="projects-filter__item"><button class="project__filter-btn" type="button">Приложения</button></li>
+                <li class="projects-filter__item"><button class="project__filter-btn" type="button">Дизайн</button></li>
+                <li class="projects-filter__item"><button class="project__filter-btn" type="button">Маркетинг</button></li>
             </ul>
             <ul class="list projects-list">
-                <li class="projects-item">
-                    <a class="link project-link" href="">
-                        <div class="overlay-wrapper">
-                    <img class="project-img" src="./images/project-1.jpg" alt="Эскиз проекта" width="370">
-                    <p class="project-about">
+                <li class="projects__item">
+                    <a class="link project__item-link" href="">
+                        <div class="project__overlay-wrapper">
+                    <img class="project__item-img" src="./images/project-1.jpg" alt="Эскиз проекта" width="370">
+                    <p class="project__overlay-text">
                         Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                     </div>
-                    <div class="projects-text-container">
-                    <h2 class="projects-subtitle">Технокряк</h2>
-                    <p class="projects-text">Веб-сайт</p>
+                    <div class="projects__about-wrap">
+                    <h2 class="project__title">Технокряк</h2>
+                    <p class="projects__about-text">Веб-сайт</p>
                     </div>
                     </a>
                 </li>
-                <li class="projects-item">
-                    <a class="link project-link" href="">
-                        <div class="overlay-wrapper">
-                    <img class="project-img" src="./images/project-2.jpg" alt="Эскиз проекта" width="370">
-                    <p class="project-about">
+                <li class="projects__item">
+                    <a class="link project__item-link" href="">
+                        <div class="project__overlay-wrapper">
+                    <img class="project__item-img" src="./images/project-2.jpg" alt="Эскиз проекта" width="370">
+                    <p class="project__overlay-text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus temporibus accusantium officia mollitia aspernatur fugiat earum eos perferendis atque asperiores?
                     </p>
                     </div>
-                    <div class="projects-text-container">
-                    <h2 class="projects-subtitle">Постер New Orlean vs Golden Star</h2>
-                    <p class="projects-text">Дизайн</p>
+                    <div class="projects__about-wrap">
+                    <h2 class="project__title">Постер New Orlean vs Golden Star</h2>
+                    <p class="projects__about-text">Дизайн</p>
                     </div>
                     </a>
                 </li>
-                <li class="projects-item">
-                    <a class="link project-link" href="">
-                        <div class="overlay-wrapper">
-                    <img class="project-img" src="./images/project-3.jpg" alt="Эскиз проекта" width="370">
-                    <p class="project-about">
+                <li class="projects__item">
+                    <a class="link project__item-link" href="">
+                        <div class="project__overlay-wrapper">
+                    <img class="project__item-img" src="./images/project-3.jpg" alt="Эскиз проекта" width="370">
+                    <p class="project__overlay-text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus temporibus accusantium officia mollitia aspernatur fugiat earum eos perferendis atque asperiores?
                     </p>
                     </div>
-                    <div class="projects-text-container">
-                    <h2 class="projects-subtitle">Ресторан Seafood</h2>
-                    <p class="projects-text">Приложение</p>
+                    <div class="projects__about-wrap">
+                    <h2 class="project__title">Ресторан Seafood</h2>
+                    <p class="projects__about-text">Приложение</p>
                     </div>
                     </a>
                 </li>
-                <li class="projects-item">
-                    <a class="link project-link" href="">
-                        <div class="overlay-wrapper">
-                    <img class="project-img" src="./images/project-4.jpg" alt="Эскиз проекта" width="370">
-                    <p class="project-about">
+                <li class="projects__item">
+                    <a class="link project__item-link" href="">
+                        <div class="project__overlay-wrapper">
+                    <img class="project__item-img" src="./images/project-4.jpg" alt="Эскиз проекта" width="370">
+                    <p class="project__overlay-text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus temporibus accusantium officia mollitia aspernatur fugiat earum eos perferendis atque asperiores?
                     </p>
                     </div>
-                    <div class="projects-text-container">
-                    <h2 class="projects-subtitle">Проект Prime</h2>
-                    <p class="projects-text">Маркетинг</p>
+                    <div class="projects__about-wrap">
+                    <h2 class="project__title">Проект Prime</h2>
+                    <p class="projects__about-text">Маркетинг</p>
                     </div>
                     </a>
                 </li>
-                <li class="projects-item">
-                    <a class="link project-link" href="">
-                        <div class="overlay-wrapper">
-                    <img class="project-img" src="./images/project-5.jpg" alt="Эскиз проекта" width="370">
-                    <p class="project-about">
+                <li class="projects__item">
+                    <a class="link project__item-link" href="">
+                        <div class="project__overlay-wrapper">
+                    <img class="project__item-img" src="./images/project-5.jpg" alt="Эскиз проекта" width="370">
+                    <p class="project__overlay-text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus temporibus accusantium officia mollitia aspernatur fugiat earum eos perferendis atque asperiores?
                     </p>
                     </div>
-                    <div class="projects-text-container">
-                    <h2 class="projects-subtitle">Проект Boxes</h2>
-                    <p class="projects-text">Приложение</p>
+                    <div class="projects__about-wrap">
+                    <h2 class="project__title">Проект Boxes</h2>
+                    <p class="projects__about-text">Приложение</p>
                     </div>
                     </a>
                 </li>
-                <li class="projects-item">
-                    <a class="link project-link" href="">
-                        <div class="overlay-wrapper">
-                    <img class="project-img" src="./images/project-6.jpg" alt="Эскиз проекта" width="370">
-                    <p class="project-about">
+                <li class="projects__item">
+                    <a class="link project__item-link" href="">
+                        <div class="project__overlay-wrapper">
+                    <img class="project__item-img" src="./images/project-6.jpg" alt="Эскиз проекта" width="370">
+                    <p class="project__overlay-text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus temporibus accusantium officia mollitia aspernatur fugiat earum eos perferendis atque asperiores?
                     </p>
                     </div>
-                    <div class="projects-text-container">
-                    <h2 class="projects-subtitle">Inspiration has no Borders</h2>
-                    <p class="projects-text">Веб-сайт</p>
+                    <div class="projects__about-wrap">
+                    <h2 class="project__title">Inspiration has no Borders</h2>
+                    <p class="projects__about-text">Веб-сайт</p>
                     </div>
                     </a>
                 </li>
-                <li class="projects-item">
-                    <a class="link project-link" href="">
-                        <div class="overlay-wrapper">
-                    <img class="project-img" src="./images/project-7.jpg" alt="Эскиз проекта" width="370">
-                    <p class="project-about">
+                <li class="projects__item">
+                    <a class="link project__item-link" href="">
+                        <div class="project__overlay-wrapper">
+                    <img class="project__item-img" src="./images/project-7.jpg" alt="Эскиз проекта" width="370">
+                    <p class="project__overlay-text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus temporibus accusantium officia mollitia aspernatur fugiat earum eos perferendis atque asperiores?
                     </p>
                     </div>
-                    <div class="projects-text-container">
-                    <h2 class="projects-subtitle">Издание Limited Edition</h2>
-                    <p class="projects-text">Издание Limited Edition</p>
+                    <div class="projects__about-wrap">
+                    <h2 class="project__title">Издание Limited Edition</h2>
+                    <p class="projects__about-text">Издание Limited Edition</p>
                     </div>
                     </a>
                 </li>
-                <li class="projects-item">
-                    <a class="link project-link" href="">
-                        <div class="overlay-wrapper">
-                    <img class="project-img" src="./images/project-8.jpg" alt="Эскиз проекта" width="370">
-                    <p class="project-about">
+                <li class="projects__item">
+                    <a class="link project__item-link" href="">
+                        <div class="project__overlay-wrapper">
+                    <img class="project__item-img" src="./images/project-8.jpg" alt="Эскиз проекта" width="370">
+                    <p class="project__overlay-text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus temporibus accusantium officia mollitia aspernatur fugiat earum eos perferendis atque asperiores?
                     </p>
                     </div>
-                    <div class="projects-text-container">
-                    <h2 class="projects-subtitle">Проект LAB</h2>
-                    <p class="projects-text">Маркетинг</p>
+                    <div class="projects__about-wrap">
+                    <h2 class="project__title">Проект LAB</h2>
+                    <p class="projects__about-text">Маркетинг</p>
                     </div>
                     </a>
                 </li>
-                <li class="projects-item">
-                    <a class="link project-link" href="">
-                        <div class="overlay-wrapper">
-                    <img class="project-img" src="./images/project-9.jpg" alt="Эскиз проекта" width="370">
-                    <p class="project-about">
+                <li class="projects__item">
+                    <a class="link project__item-link" href="">
+                        <div class="project__overlay-wrapper">
+                    <img class="project__item-img" src="./images/project-9.jpg" alt="Эскиз проекта" width="370">
+                    <p class="project__overlay-text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus temporibus accusantium officia mollitia aspernatur fugiat earum eos perferendis atque asperiores?
                     </p>
                     </div>
-                    <div class="projects-text-container">
-                    <h2 class="projects-subtitle">Growing Business</h2>
-                    <p class="projects-text">Приложение</p>
+                    <div class="projects__about-wrap">
+                    <h2 class="project__title">Growing Business</h2>
+                    <p class="projects__about-text">Приложение</p>
                     </div>
                     </a>
                 </li>
