--- a/index.html
+++ b/index.html
@@ -113,22 +113,22 @@
                     <h3 class="team__item-title">Игорь Демьяненко</h3>
                     <p class="team__item-text" lang="en">Product Designer</p>
                     <ul class="list team__socials-list">
-                        <li class="socials__item"><a class="socials__item-link inst" href="">
+                        <li class="socials__item"><a class="link socials__item-link inst" href="">
                             <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#instagram"></use>
                             </svg>
                         </a></li>
-                        <li class="socials__item"><a class="socials__item-link twit" href="">
+                        <li class="socials__item"><a class="link socials__item-link twit" href="">
                             <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a></li>
-                        <li class="socials__item"><a class="socials__item-link face" href="">
+                        <li class="socials__item"><a class="link socials__item-link face" href="">
                             <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a></li>
-                        <li class="socials__item"><a class="socials__item-link linkedin" href="">
+                        <li class="socials__item"><a class="link socials__item-link linkedin" href="">
                             <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#linkedin"></use>
                             </svg>
@@ -142,22 +142,22 @@
                     <h3 class="team__item-title">Ольга Репина</h3>
                     <p class="team__item-text" lang="en">Frontend Developer</p>
                     <ul class="list team__socials-list">
-                        <li class="socials__item"><a class="socials__item-link inst" href="">
+                        <li class="socials__item"><a class="link socials__item-link inst" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a></li>
-                        <li class="socials__item"><a class="socials__item-link twit" href="">
+                        <li class="socials__item"><a class="link socials__item-link twit" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a></li>
-                        <li class="socials__item"><a class="socials__item-link face" href="">
+                        <li class="socials__item"><a class="link socials__item-link face" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a></li>
-                        <li class="socials__item"><a class="socials__item-link linkedin" href="">
+                        <li class="socials__item"><a class="link socials__item-link linkedin" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
@@ -171,22 +171,22 @@
                     <h3 class="team__item-title">Николай Тарасов</h3>
                     <p class="team__item-text" lang="en">Marketing</p>
                     <ul class="list team__socials-list">
-                        <li class="socials__item"><a class="socials__item-link inst" href="">
+                        <li class="socials__item"><a class="link socials__item-link inst" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a></li>
-                        <li class="socials__item"><a class="socials__item-link twit" href="">
+                        <li class="socials__item"><a class="link socials__item-link twit" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a></li>
-                        <li class="socials__item"><a class="socials__item-link face" href="">
+                        <li class="socials__item"><a class="link socials__item-link face" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a></li>
-                        <li class="socials__item"><a class="socials__item-link linkedin" href="">
+                        <li class="socials__item"><a class="link socials__item-link linkedin" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
@@ -200,22 +200,22 @@
                     <h3 class="team__item-title">Михаил Ермаков</h3>
                     <p class="team__item-text" lang="en">UI Designer</p>
                     <ul class="list team__socials-list">
-                        <li class="socials__item"><a class="socials__item-link inst" href="">
+                        <li class="socials__item"><a class="link socials__item-link inst" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a></li>
-                        <li class="socials__item"><a class="socials__item-link twit" href="">
+                        <li class="socials__item"><a class="link socials__item-link twit" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a></li>
-                        <li class="socials__item"><a class="socials__item-link face" href="">
+                        <li class="socials__item"><a class="link socials__item-link face" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a></li>
-                        <li class="socials__item"><a class="socials__item-link linkedin" href="">
+                        <li class="socials__item"><a class="link socials__item-link linkedin" href="">
                                 <svg class="social-icon" width="20" height="20">
                                     <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
@@ -277,30 +277,30 @@
         <address>
             <ul class="list footer-contacts-list">
                 <li class="footer-contacts__item-address">г. Киев, пр-т Леси Украинки, 26</li>
-                <li class="footer-contacts__item"><a href="mailto:info@devstudio.com" class="contacts-link-footer">info@devstudio.com</a></li>
-                <li class="footer-contacts__item"><a href="tel:+380961111111" class="contacts-link-footer">+38 096 111 11 11</a></li>
+                <li class="footer-contacts__item"><a href="mailto:info@devstudio.com" class="link contacts-link-footer">info@devstudio.com</a></li>
+                <li class="footer-contacts__item"><a href="tel:+380961111111" class="link contacts-link-footer">+38 096 111 11 11</a></li>
             </ul>
         </address>
         </div>
         <div class="join-us">
             <p class="join-us__text">ПРИСОЕДИНЯЙТЕСЬ</p>
         <ul class="list join-us-list">
-            <li class="join-us__item"><a class="join-us__link inst" href="">
+            <li class="join-us__item"><a class="link join-us__link inst" href="">
                 <svg class="join-us__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                 </svg>
             </a></li>
-            <li class="join-us__item"><a class="join-us__link twit" href="">
+            <li class="join-us__item"><a class="link join-us__link twit" href="">
                 <svg class="join-us__icon" width="20" height="20">
                     <use href="./images/icons.svg#twitter"></use>
                 </svg>
             </a></li>
-            <li class="join-us__item"><a class="join-us__link face" href="">
+            <li class="join-us__item"><a class="link join-us__link face" href="">
                 <svg class="join-us__icon" width="20" height="20">
                     <use href="./images/icons.svg#facebook"></use>
                 </svg>
             </a></li>
-            <li class="join-us__item"><a class="join-us__link linkedin" href="">
+            <li class="join-us__item"><a class="link join-us__link linkedin" href="">
                 <svg class="join-us__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                 </svg>
