--- a/portfolio.html
+++ b/portfolio.html
@@ -17,19 +17,19 @@
                 <a href="./index.html" class="link header-logo" lang="en">Web<span
                         class="header-logo__right">Studio</span></a>
                 <ul class="list nav-list">
-                    <li class="nav__item"><a href="./index.html" class="nav__item-link">Студия</a>
+                    <li class="nav__item"><a href="./index.html" class="link nav__item-link">Студия</a>
                     </li>
-                    <li class="nav__item"><a href="./portfolio.html" class="nav__item-link nav__item-link-current">Портфолио</a></li>
-                    <li class="nav__item"><a href="" class="nav__item-link">Контакты</a></li>
+                    <li class="nav__item"><a href="./portfolio.html" class="link nav__item-link nav__item-link-current">Портфолио</a></li>
+                    <li class="nav__item"><a href="" class="link nav__item-link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="list header-contacts-list">
-                <li class="contacts__item"><a href="mailto:info@devstudio.com" class="contacts-item__link">
+                <li class="contacts__item"><a href="mailto:info@devstudio.com" class="link contacts-item__link">
                         <svg class="contacts-icon" width="16" height="12">
                             <use href="./images/icons.svg#envelope"></use>
                         </svg>
                         info@devstudio.com</a></li>
-                <li class="contacts__item"><a href="tel:+380961111111" class="contacts-item__link">
+                <li class="contacts__item"><a href="tel:+380961111111" class="link contacts-item__link">
                         <svg class="contacts-icon" width="10" height="16">
                             <use href="./images/icons.svg#smartphone"></use>
                         </svg>
@@ -188,8 +188,8 @@
                         <ul class="list footer-contacts-list">
                             <li class="footer-contacts__item-address">г. Киев, пр-т Леси Украинки, 26</li>
                             <li class="footer-contacts__item"><a href="mailto:info@devstudio.com"
-                                    class="contacts-link-footer">info@devstudio.com</a></li>
-                            <li class="footer-contacts__item"><a href="tel:+380961111111" class="contacts-link-footer">+38 096
+                                    class="link contacts-link-footer">info@devstudio.com</a></li>
+                            <li class="footer-contacts__item"><a href="tel:+380961111111" class="link contacts-link-footer">+38 096
                                     111 11 11</a></li>
                         </ul>
                     </address>
@@ -197,22 +197,22 @@
                 <div class="join-us">
                     <p class="join-us__text">ПРИСОЕДИНЯЙТЕСЬ</p>
                     <ul class="list join-us-list">
-                        <li class="join-us__item"><a class="join-us__link inst" href="">
+                        <li class="join-us__item"><a class="link join-us__link inst" href="">
                                 <svg class="join-us__icon" width="20" height="20">
                                     <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a></li>
-                        <li class="join-us__item"><a class="join-us__link twit" href="">
+                        <li class="join-us__item"><a class="link join-us__link twit" href="">
                                 <svg class="join-us__icon" width="20" height="20">
                                     <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a></li>
-                        <li class="join-us__item"><a class="join-us__link face" href="">
+                        <li class="join-us__item"><a class="link join-us__link face" href="">
                                 <svg class="join-us__icon" width="20" height="20">
                                     <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a></li>
-                        <li class="join-us__item"><a class="join-us__link linkedin" href="">
+                        <li class="join-us__item"><a class="link join-us__link linkedin" href="">
                                 <svg class="join-us__icon" width="20" height="20">
                                     <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
